<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkSlateGray"
    tools:context=".view.activities.AddEmployeeActivity">

    <FrameLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="@drawable/round_black_bd"
            android:gravity="center"
            android:src="@drawable/man"
            fancy:civ_border_color="@android:color/transparent"
            fancy:civ_border_width="0dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_camera"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <EditText
        android:id="@+id/employee_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edit_text_tag"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:hint="@string/employee_name"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorGrayDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_layout"
        app:layout_constraintStart_toStartOf="@+id/profile_image_layout"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_layout"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/employee_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edit_text_tag"
        android:hint="@string/employee_age"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorGrayDark"
        android:textSize="14sp"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="@+id/employee_name"
        app:layout_constraintStart_toStartOf="@+id/employee_name"
        app:layout_constraintTop_toBottomOf="@+id/employee_name"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/employee_gender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:padding="10dp"
        android:dropDownWidth="145dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/employee_age"
        app:layout_constraintStart_toStartOf="@+id/employee_age"
        app:layout_constraintTop_toBottomOf="@+id/employee_age"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/employee_gender"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/employee_gender"
        fancy:fb_defaultColor="@color/white"
        fancy:fb_focusColor="@color/colorSlateGray"
        fancy:fb_radius="10dp"
        fancy:fb_text="@string/save"
        fancy:fb_textColor="@color/black"
        fancy:fb_textSize="16sp" />



</androidx.constraintlayout.widget.ConstraintLayout>